force-app/main/default/objects/Tax_Bracket__mdt/Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <description>Tax Brackets used for Pricing Calculator in 2021 (change as needed)</description>
    <label>Tax Bracket</label>
    <pluralLabel>Tax Brackets</pluralLabel>
</CustomObject>