force-app/main/default/objects/Tax_Bracket__mdt/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <description>Matches the Pricing Calculator</description>
    <inlineHelpText>Matches the Pricing Calculator</inlineHelpText>
    <label>Filing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Married Filing Jointly</fullName>
            </value>
            <value>
                <fullName>Head of Household</fullName>
            </value>
            <value>
                <fullName>Married Filing Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>