force-app/main/default/objects/Tax_Bracket__mdt/fields/Maximum_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Taxable_Income__c</fullName>
    <label>Maximum Taxable Income</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>