force-app/main/default/objects/Tax_Bracket__mdt/fields/Tax_Bracket_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bracket_Percentage__c</fullName>
    <label>Tax Bracket Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>